--- a/style.css
+++ b/style.css
@@ -1,23 +1,126 @@
 :root{
-    --fuente-principal: 'Lato', sans-serif;
-    --color-primario: #570530;
-    --color-secundario: #750550;
-    --color-terciario: #980F5A;
+  --fuente-principal: 'Righteous', cursive;
+  --fuente-secundaria: 'IBM Plex Sans Arabic', sans-serif;
+  --color-primario: #570530;
+  --color-secundario: #750550;
+  --color-terciario: #980F5A;
 }
 
 html {
-    font-size: 62.5%; /* 1 rem = 10 px */
-    box-sizing: border-box;
+  font-size: 62.5%; /* 1 rem = 10 px */
+  box-sizing: border-box;
   }
   *, *:before, *:after {
-    box-sizing: inherit;
+  box-sizing: inherit;
   }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: XXXXX;
-    font-size: 1.6rem;
-    line-height: 2;
+  margin: 0;
+  padding: 0;
+  font-size: 1.6rem;
+  line-height: 1.5;
+}
+
+.main-container {
+  display: flex;
+  height: 100%;
+  position: absolute;
+}
+
+.hero {
+  min-height: 100%;
+  width: 60%;
+  background-image: url(img-1.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+}
+
+.icon{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 15rem;
+  width: 100%;
+  height: 8rem;
+  background-color: rgba(147, 199, 199, 0.5);
+}
+
+.main-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 5rem;
+  color: azure;
+}
+
+.main-icon span{
+  font-family: var(--fuente-principal);
+}
+
+.section-form {
+  background-color: #dbdbdb;
+  font-family: var(--fuente-secundaria);
+  font-weight: 900;
+}
+
+.form-container {
+  width: 80%;
+  margin: auto;
+  padding-top: 5rem;
+}
+
+.header {
+  width: 80%;
+  margin: auto;
+  padding-top: 5rem;
+}
+
+.form-container {
+  width: 100%;
+  background-color: white;
+}
+
+.form-tittle {
+  width: 80%;
+  margin: auto;
+}
+
+.form {
+  width: 80%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+}
+
+
+.btn-container {
+  width: 80%;
+  margin: auto;
+  padding-top: 5rem;
+}
+
+.btn-container button {
+  height: 5rem;
+  width: 20rem;
+  background-color: #596D48;
+  color: white;
+  font-size: 1.7rem;
+  font-weight: bold;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+.btn-container button:hover {
+  background-color: hsl(92, 30%, 58%);
+  transition: 0.3ms;
+}
+
+.btn-container p {
+  padding-top: 1.5rem;
 }
 
