--- a/style.css
+++ b/style.css
@@ -61,26 +61,33 @@ body {
 }
 
 .section-form {
+  display: flex;
+  flex-direction: column;
   background-color: #dbdbdb;
   font-family: var(--fuente-secundaria);
   font-weight: 900;
 }
 
-.form-container {
-  width: 80%;
-  margin: auto;
-  padding-top: 5rem;
-}
-
 .header {
   width: 80%;
   margin: auto;
-  padding-top: 5rem;
+  padding-top: 0.6rem;
+}
+
+.header p:last-of-type {
+  font-style: italic;
 }
 
 .form-container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.5rem;
   width: 100%;
-  background-color: white;
+}
+
+.form-body {
+ background-color: white;
+ padding: 2.5rem 0;
 }
 
 .form-tittle {
@@ -88,25 +95,59 @@ body {
   margin: auto;
 }
 
+.form-tittle h2 {
+  margin: 0;
+}
+
 .form {
   width: 80%;
   margin: auto;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.8rem;
+}
+
+.input-container input {
+  width: 70%;
+  padding: 0.6rem;
+  border-radius: 0.4rem;
+  border: 2px solid rgba(223, 216, 216, 0.747);
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+  outline: none;
+}
+
+.input-container input:focus {
+  border: 2px solid rgba(18, 109, 170, 0.747); 
+}
+
+.input-container input:focus:invalid {
+  border: 2px solid rgba(214, 44, 32, 0.747); 
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 
 .btn-container {
   width: 80%;
   margin: auto;
-  padding-top: 5rem;
+  padding-top: 2.5rem;
 }
 
 .btn-container button {
-  height: 5rem;
+  height: 4rem;
   width: 20rem;
-  background-color: #596D48;
+  background-color: #6ab627;
   color: white;
   font-size: 1.7rem;
   font-weight: bold;
@@ -116,11 +157,9 @@ body {
 }
 
 .btn-container button:hover {
-  background-color: hsl(92, 30%, 58%);
-  transition: 0.3ms;
-}
+  background-color: hsl(92, 91%, 30%);
 
 .btn-container p {
-  padding-top: 1.5rem;
+  padding-top: 1rem;
 }
 
